Added Various api end points to make integration easier
This partially addresses issue #78
