# swagger.json
@@ -163,6 +163,72 @@
                 }
             }
         },
+        "/session/createNewSession/{processorName}/{projectName}/{line}/{dive}/{lineID}/{type}" : {
+            "post" : {
+                "summary" : "Creates a new session if it doesn't exist. Also create new processor name, and/or project Name, if they do not exist.",
+                "description": "Create New session, and possiblly new processor name and project name.",
+                "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "processorName",
+                        "in": "path",
+                        "description": "The Name of the processor we are creating a new session for. If name doesn't exist it will be created.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "projectName",
+                        "in": "path",
+                        "description": "The Name of the Project we are creating a new session for. If the name doesn't exist we will create it.",
+                        "required": true,
+                        "type": "string"
+                    }
+                    ,
+                    {
+                        "name": "line",
+                        "in": "path",
+                        "description": "The Line Number we are creating a session for..",
+                        "required": true,
+                        "type": "string"
+                    },{
+                        "name": "dive",
+                        "in": "path",
+                        "description": "The Dive we are creating a session for..",
+                        "required": true,
+                        "type": "string"
+                    },{
+                        "name": "lineID",
+                        "in": "path",
+                        "description": "The lineID we are creating a session for..",
+                        "required": true,
+                        "type": "string"
+                    },{
+                        "name": "type",
+                        "in": "path",
+                        "description": "The type we are creating a session for..",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/session"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid status value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/sessions/user/{userID}/project/{projectID}" : {
             "get" : {
                 "summary" : "Gets All The Sessions That are Associated with a Specific User, and a Specific Project.",
@@ -246,12 +312,114 @@
                 }
             }
         },
+        "/project/createProjectByName/{projectName}" : {
+            "post" : {
+                "summary" : "Record A New Project",
+                "description": "Record A New Project into the MARE Database. Will only create if name doesn't exist.",
+                "produces": ["application/json"],
+                "consumes": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "projectName",
+                        "in": "path",
+                        "description": "The name of the project we want to create.",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/project"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid status value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/projects" : {
             "get" : {
                 "summary" : "Get All The Projects In The DB",
                 "description": "This returns a JSON Object Representing All The Projects in the Database. Warning! If the Database is too large, this can take a lot of time to run.",
                 "produces": ["application/json"],
                 "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/project"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Status Value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/user/{userID}" : {
+            "get" : {
+                "summary" : "Gets a list of projects associated with a specific userID",
+                "description": "Returns a project by its name.",
+                "produces": ["application/json"],
+                "consumes": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "userID",
+                        "in": "path",
+                        "description": "The ID of the user for which we are looking for associated projects",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/project"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Status Value",
+                        "schema": {
+                            "$ref": "#/definitions/InvalidResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/getProjectByName/{projectName}" : {
+            "get" : {
+                "summary" : "Gets a Project by the project Name",
+                "description": "Returns a project by its name.",
+                "produces": ["application/json"],
+                "consumes": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "projectName",
+                        "in": "path",
+                        "description": "The name of the project to be returned",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful Operation",
@@ -524,6 +692,39 @@
             }
         }
     },
+    "/user/{name}" : {
+        "get" : {
+            "summary" : "Get users ID by username",
+            "description": "This returns a JSON Object Representing All The Users in the Database. Warning! If the Observation Database is too large, this can take a lot of time to run.",
+            "produces": ["application/json"],
+            "parameters": [
+                {
+                    "name": "name",
+                    "in": "path",
+                    "description": "UserName we are getting info for",
+                    "required": true,
+                    "type": "string"
+                }
+            ],
+            "responses": {
+                "200": {
+                    "description": "Successful Operation",
+                    "schema": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/user"
+                        }
+                    }
+                },
+                "400": {
+                    "description": "Invalid Status Value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+            }
+        }
+    },
     "/user" : {
         "post" : {
             "summary" : "Record A New User",
@@ -545,6 +746,40 @@
                             } 
                         }
                     }
+                }
+            ],
+            "responses": {
+                "200": {
+                    "description": "Successful Operation",
+                    "schema": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/user"
+                        }
+                    }
+                },
+                "400": {
+                    "description": "Invalid status value",
+                    "schema": {
+                        "$ref": "#/definitions/InvalidResponse"
+                    }
+                }
+            }
+        }
+    },
+    "/user/createUserByName/{userName}" : {
+        "post" : {
+            "summary" : "Record A New User",
+            "description": "Record A New User into the MARE Observation Database.",
+            "produces": ["application/json"],
+            "consumes": ["application/json"],
+            "parameters": [
+                {
+                    "name": "userName",
+                    "in": "path",
+                    "description": "The Username we are attempting to create",
+                    "required": true,
+                    "type": "string"
                 }
             ],
             "responses": {
